--- a/.gitignore
+++ b/.gitignore
@@ -680,3 +680,4 @@ fabric.properties
 # End of https://www.toptal.com/developers/gitignore/api/jetbrains,rider,csharp,dotnetcore,aspnetcore
 
 docker-compose.override.yaml
+.env
